# dia

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  LICENSE.md
.github/workflows/: build-and-test.yml
builtins/: app.ts  deps.ts  flow.ts  lazy.ts  mod.ts  models.ts  types.ts
builtins/io/: terminal.ts
cli/: Cargo.toml
cli/resources/scaffolding/: deno.jsonc  env  gitignore
cli/resources/scaffolding/src/: main.ts
cli/resources/scaffolding/src/script/: start.dia
cli/src/: build.rs  common.rs  dev.rs  lib.rs  main.rs  new.rs
lib/core/: Cargo.toml
lib/core/resources/test/parser/expression/positive/: object.txt  sum.txt  tricky_string.txt
lib/core/resources/test/parser/module/positive/: 2nodes.dia  expression.dia
lib/core/src/: ast.rs  codegen.rs  grammar.pest  lib.rs  main.rs  swc_utils.rs  traits.rs
lib/core/src/compiler/: build.rs  constructs.rs  emit.rs  mod.rs
resources/: t1.dia
resources/test/parser/expression/positive/: arrow_function.txt  tricky_template.txt  tricky_template2.txt  tricky_template3.txt
resources/test/parser/module/positive/: choices.dia  simple.dia  then.dia
src/: ast.rs  codegen.rs  grammar.pest  lib.rs  main.rs  parser.rs  test_utils.rs  traits.rs  utils.rs
tests/: Cargo.toml
tests/integration/: mod.rs  new_tests.rs
