[package]
name = "dia"
version = "0.1.0"
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dia-core = { version = "0.1.0", path = "../lib/core" }
clap = { version = "^4.5.3", features = ["derive"] }
glob = "0.3.1"
dotenv = "0.15.0"
