[package]
name = "dia"
version = "0.1.0"
description = "cli for running and creating dia apps"
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dia_core = { version = "0.1.0", path = "../lib/core" }
clap = { version = "^4.5.3", features = ["derive"] }
glob = "0.3.1"
