[package]
name = "dia_core"
version = "0.1.0"
description = "core elements of dia"
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
thiserror = "1.0.58"
pest = "2.7.8"
pest_derive = "2.7.8"
swc_atoms = "0.6.5"
swc_common = "0.33.19"
swc_ecma_ast = "0.112.5"
swc_ecma_codegen = "0.148.11"
swc_ecma_parser = "0.143.12"
